--- a/lib/lz4/Makefile
+++ b/lib/lz4/Makefile
@@ -6,3 +6,4 @@ obj-$(CONFIG_LZ4HC_COMPRESS) += lz4hc_compress.o
 obj-$(CONFIG_LZ4_DECOMPRESS) += lz4_decompress.o
 
 subdir-ccflags-y := $(call cc-disable-warning, unused-function)
+obj-$(CONFIG_ARM64) += $(addprefix lz4armv8/, lz4accel.o lz4armv8.o)
