raphael_defconfig: enable kprofiles and auto_kp set default to ballance
Signed-off-by: onettboots <blackcocopet@gmail.com>

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -769,3 +769,6 @@ CONFIG_SOUNDWIRE=y
 CONFIG_SOUNDWIRE_WCD_CTRL=y
 CONFIG_WCD9XXX_CODEC_CORE=y
 CONFIG_WCD_DSP_GLINK=y
+CONFIG_KPROFILES=y
+CONFIG_DEFAULT_KP_MODE=2
+CONFIG_AUTO_KPROFILES_MSM_DRM=y
