sched/core: Introduce Uclamp Assist
Change-Id: Ib95043b40eb67d78b2d123fa82c2bdacf3b8cfee
Signed-off-by: onettboots <blackcocopet@gmail.com>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1266,7 +1266,13 @@ config SCHED_TUNE
 
 	  If unsure, say N.
 
-config CPUSETS_ASSIST
+config UCLAMP_ASSIST
+	bool "UClamp configuration helper"
+	depends on ANDROID && UCLAMP_TASK && UCLAMP_TASK_GROUP
+	help
+	  This option enabled in-kernel uclamp setting overrides
+
+config CPUSETs_ASSIST
 	bool "Cpuset configuration helper"
 	depends on CPUSETS
 	depends on ANDROID
