--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -41,6 +41,13 @@ CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_SCHED=y
 # CONFIG_SCHED_TUNE is not set
+CONFIG_CPUSET_ASSIST=y
+CONFIG_CPUSET_BG="0-1"
+CONFIG_CPUSET_CAMERA="0-3,6-7"
+CONFIG_CPUSET_FG="0-3,5-6"
+CONFIG_CPUSET_RESTRICTED="0-3"
+CONFIG_CPUSET_TOP_APP="0-7"
+CONFIG_CPUSET_SYSTEM_BG="0-3"
 # CONFIG_SCHED_TUNE_DUMMY is not set
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
