Revert "raphael_defconfig: regen"
This reverts commit fd927bd5a78404196a01d86fcac2fe886de7c63e.

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -1003,6 +1003,7 @@ CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 # CONFIG_LRU_GEN_STATS is not set
 CONFIG_PSI=y
+CONFIG_HAVE_LOW_MEMORY_KILLER=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_ANON_MIN_KBYTES=0
 CONFIG_CLEAN_LOW_KBYTES=0
