--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -6,7 +6,7 @@ CONFIG_LOCALVERSION="-Bool-X-🇮🇩"
 CONFIG_CC_WERROR=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
-# CONFIG_IRQ_TIME_ACCOUNTING is not set
+CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_MOVE_PMD=y
 CONFIG_SCHED_WALT=y
 CONFIG_TASKSTATS=y
@@ -24,8 +24,8 @@ CONFIG_LOG_BUF_SHIFT=21
 CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_PAGE_COUNTER=y
-# CONFIG_MEMCG is not set
-# CONFIG_MEMCG_SWAP is not set
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
 CONFIG_BLK_CGROUP=y
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_CGROUP_FREEZER=y
@@ -131,7 +131,7 @@ CONFIG_COMPAT_VDSO=y
 CONFIG_SUSPEND_SKIP_SYNC=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
-CONFIG_PM_WAKELOCKS_GC=y
+# CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_CPU_IDLE=y
 CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_IDLE_GOV_TEO=y
