sbalance: drop long balance interval
Signed-off-by: onettboots <blackcocopet@gmail.com>

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -990,6 +990,8 @@ CONFIG_AUTO_KPROFILES_MSM_DRM=y
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 CONFIG_IRQ_SBALANCE=y
 CONFIG_SBALANCE_EXCLUDE_CPUS="3,6,7"
+CONFIG_IRQ_SBALANCE_POLL_MSEC=3000
+CONFIG_IRQ_SBALANCE_THRESH=1024
 CONFIG_SCHED_CASS=y
 CONFIG_INIT_STACK_ALL_ZERO=y
 # CONFIG_BOEFFLA_WL_BLOCKER is not set
@@ -1020,3 +1022,5 @@ CONFIG_VETH=y
 CONFIG_USB_CONFIGFS_F_UVC=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
+CONFIG_VETH=y
+CONFIG_CAMERA_DISABLE_DUMP_STATE=y
