Squashed 'drivers/staging/kernelsu/' changes from 006a1b765754b..c8dd0b070ccc2
c8dd0b070ccc2 ksud: Fix compiler error
063d5c80254d7 ksud: use sha1 library to calc hash
ac4c6f78958b9 manager: Fix select kmi not working
472a94b6f2e26 ksud: Fix name typo
8ba008fb9f407 ksud: Fix backup not working
825b14635fe16 ksud: move backup directory to `/data/adb/ksu`
52c7f0e2bfebe manager: extract flashWithIO
05eb280d7907a manager: hide "uninstall temporary" temporarily.
97dd3d9ec2aa3 manager: Add UI for uninstall permanently
3aac979caaf55 ksud: skip removing module if no modules exist, also add uninstall mangaer, reboot
0697db618eeea ksud: Add uninstall
4922d89823720 website: update translation (#1653)
3750e6e759712 Translations update from Hosted Weblate (#1635)
ba28d57e9440a Add LG G8 / G8s / G8X source (#1651)
dff1452eaaf52 build(deps): bump androidx.compose:compose-bom from 2024.04.00 to 2024.04.01 in /manager (#1644)
311fad7462355 build(deps): bump serde_json from 1.0.115 to 1.0.116 in /userspace/ksud (#1637)
54383dfc94513 build(deps): bump serde from 1.0.197 to 1.0.198 in /userspace/ksud (#1640)
c2bf237fd231d build(deps-dev): bump vitepress from 1.1.0 to 1.1.3 in /website (#1650)
1db9fc202919d ci: a13-5.10, a13-5.15, a14-5.15 and a14-6.1 patch level 2024-04 (#1649)
99f7bfea6eb65 Add support for ChromeOS ARM64 ARCVM (#1642)
1f67487c37c10 fix grant root failed #1559 (#1633)
7aa36dc32645d build(deps): bump chrono from 0.4.37 to 0.4.38 in /userspace/ksud (#1632)
9b72b4542c5cf [add device]: LG V60 timelm (#1630)
b1a225799a332 manager: Allow to use other su to install
2e2992a1c2528 Translations update from Hosted Weblate (#1617)
50387a9d3db36 ksud: do not abort if backup failed (#1627)
488564fe767d9 ksud: only backup stock boot if flashing (#1626)
37df6ffc523bc Merge pull request #1623 from 5ec1cff/5ec1cff-patch-1
ee05aed5e58c7 fix boot restore
60dd52afd1a34 ksud: backup stock image and use it when restore (#1619)
1be266b6f6241 Register receiver with RECEIVER_EXPORTED (#1620)
1e

--- a/.github/workflows/build-kernel-a14.yml
+++ b/.github/workflows/build-kernel-a14.yml
@@ -33,6 +33,9 @@ jobs:
           - version: "5.15"
             sub_level: 144
             os_patch_level: 2024-03
+          - version: "5.15"
+            sub_level: 148
+            os_patch_level: 2024-04
           - version: "6.1"
             sub_level: 25
             os_patch_level: 2023-10
@@ -45,6 +48,9 @@ jobs:
           - version: "6.1"
             sub_level: 68
             os_patch_level: 2024-03
+          - version: "6.1"
+            sub_level: 75
+            os_patch_level: 2024-04
     uses: ./.github/workflows/gki-kernel.yml
     secrets: inherit
     with:
@@ -134,8 +140,8 @@ jobs:
             sub_level: 110
             os_patch_level: 2023-09
           - version: "6.1"
-            sub_level: 68
-            os_patch_level: 2024-03
+            sub_level: 75
+            os_patch_level: 2024-04
     uses: ./.github/workflows/gki-kernel.yml
     with:
       version: android14-${{ matrix.version }}
