--- a/.github/workflows/build-kernel-a13.yml
+++ b/.github/workflows/build-kernel-a13.yml
@@ -48,6 +48,9 @@ jobs:
           - version: "5.10"
             sub_level: 205
             os_patch_level: 2024-03
+          - version: "5.10"
+            sub_level: 209
+            os_patch_level: 2024-04
           - version: "5.15"
             sub_level: 94
             os_patch_level: 2023-05
@@ -65,7 +68,10 @@ jobs:
             os_patch_level: 2023-12
           - version: "5.15"
             sub_level: 144
-            os_patch_level: 2024-02
+            os_patch_level: 2024-03
+          - version: "5.15"
+            sub_level: 148
+            os_patch_level: 2024-04
     uses: ./.github/workflows/gki-kernel.yml
     secrets: inherit
     with:
