--- a/userspace/ksud/Cargo.toml
+++ b/userspace/ksud/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ksud"
 version = "0.1.0"
 edition = "2021"
-rust-version = "1.76"
+rust-version = "1.77.2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -34,6 +34,7 @@ rust-embed = { version = "8", features = [
 which = "6"
 getopts = "0.2"
 sha256 = "1"
+sha1 = "0.10"
 tempdir = "0.3"
 chrono = "0.4"
 hole-punch = { git = "https://github.com/tiann/hole-punch" }
