--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -1,7 +1,9 @@
 CONFIG_TOOLS_SUPPORT_RELR=y
-CONFIG_LOCALVERSION="-SOVIET-STAR-"
+CONFIG_LOCALVERSION="-perf"
 CONFIG_INLINE_OPTIMIZATION=y
 # CONFIG_FHANDLE is not set
+CONFIG_AUDIT=y
+# CONFIG_AUDITSYSCALL is not set
 CONFIG_IRQ_SBALANCE=y
 CONFIG_IRQ_SBALANCE_POLL_MSEC=15000
 CONFIG_SBALANCE_EXCLUDE_CPUS="6,7"
