--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -48,7 +48,7 @@ CONFIG_CPUSET_FG="0-3,5-6"
 CONFIG_CPUSET_RESTRICTED="0-3"
 CONFIG_CPUSET_TOP_APP="0-7"
 CONFIG_CPUSET_SYSTEM_BG="0-3"
-# CONFIG_SCHED_TUNE_DUMMY is not set
+CONFIG_SCHED_TUNE_DUMMY=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
