--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -190,9 +190,8 @@ CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BBR=y
-# CONFIG_TCP_CONG_BBR2 is not set
-CONFIG_TCP_CONG_BBRPLUS=y
-CONFIG_DEFAULT_BBRPLUS=y
+CONFIG_TCP_CONG_BBR2=y
+CONFIG_DEFAULT_BBR2=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
