--- a/drivers/kernelsu/kernel/Makefile
+++ b/drivers/kernelsu/kernel/Makefile
@@ -25,7 +25,8 @@ $(eval KSU_VERSION=$(shell expr 10000 + $(KSU_GIT_VERSION) + 200))
 $(info -- KernelSU version: $(KSU_VERSION))
 ccflags-y += -DKSU_VERSION=$(KSU_VERSION)
 else # If there is no .git file, the default version will be passed.
-$(warning "KSU_GIT_VERSION not defined! It is better to make KernelSU a git submodule!")
+# $(warning "KSU_GIT_VERSION not defined! It is better to make KernelSU a git submodule!")
+# Harcoded DKSU_VERSION and Recalculate it from subtree updater
 ccflags-y += -DKSU_VERSION=16
 endif
 
