--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -24,8 +24,7 @@ CONFIG_LOG_BUF_SHIFT=21
 CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_PAGE_COUNTER=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
+# CONFIG_MEMCG is not set
 CONFIG_BLK_CGROUP=y
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_CGROUP_FREEZER=y
@@ -1017,4 +1016,5 @@ CONFIG_RMNET_SHS=y
 CONFIG_NET_SWITCHDEV=y
 CONFIG_CGROUP_NET_CLASSID=y
 CONFIG_NETFILTER_NETLINK_ACCT=y
-
+CONFIG_KALLSYMS=y
+CONFIG_ZSTD_COMMON=y
