--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -7,7 +7,6 @@ CONFIG_CC_WERROR=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_HAVE_MOVE_PMD=y
 CONFIG_SCHED_WALT=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
@@ -25,6 +24,7 @@ CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_PAGE_COUNTER=y
 # CONFIG_MEMCG is not set
+# CONFIG_MEMCG_SWAP is not set
 CONFIG_BLK_CGROUP=y
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_CGROUP_FREEZER=y
@@ -101,9 +101,6 @@ CONFIG_CFQ_GROUP_IOSCHED=y
 # CONFIG_RANDOMIZE_MODULE_REGION_FULL is not set
 CONFIG_MACH_XIAOMI=y
 CONFIG_MACH_XIAOMI_RAPHAEL=y
-CONFIG_PCI=y
-CONFIG_PCI_MSM=y
-CONFIG_PCI_MSM_MSI=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_LITTLE_CPU_MASK=15
@@ -112,7 +109,6 @@ CONFIG_PRIME_CPU_MASK=128
 CONFIG_PREEMPT=y
 CONFIG_HZ_300=y
 CONFIG_HZ=300
-CONFIG_SCHED_HRTICK=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
@@ -120,10 +116,7 @@ CONFIG_PGTABLE_MAPPING=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_SECCOMP=y
 # CONFIG_HARDEN_BRANCH_PREDICTOR is not set
-CONFIG_ARMV8_DEPRECATED=y
-CONFIG_SWP_EMULATION=y
-CONFIG_CP15_BARRIER_EMULATION=y
-CONFIG_SETEND_EMULATION=y
+# CONFIG_ARMV8_DEPRECATED is not set
 CONFIG_ARM64_LSE_ATOMICS=y
 # CONFIG_ARM64_VHE is not set
 CONFIG_RANDOMIZE_BASE=y
@@ -330,7 +323,6 @@ CONFIG_NET_ACT_MIRRED=y
 CONFIG_NET_ACT_SKBEDIT=y
 CONFIG_QRTR=y
 CONFIG_QRTR_SMD=y
-CONFIG_QRTR_MHI=y
 CONFIG_WIREGUARD=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
@@ -344,10 +336,6 @@ CONFIG_RFKILL=y
 CONFIG_NFC_NQ=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_DMA_CMA=y
-CONFIG_MHI_BUS=y
-CONFIG_MHI_QCOM=y
-CONFIG_MHI_NETDEV=y
-CONFIG_MHI_UCI=y
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_WRITEBACK is not set
 # CONFIG_ZRAM_DEF_COMP_ZSTD is not set
@@ -661,8 +649,6 @@ CONFIG_IPA3=y
 CONFIG_IPA_WDI_UNIFIED_API=y
 CONFIG_RMNET_IPA3=y
 CONFIG_RNDIS_IPA=y
-CONFIG_IPA3_MHI_PROXY=y
-CONFIG_IPA3_MHI_PRIME_MANAGER=y
 CONFIG_SEEMP_CORE=y
 CONFIG_IPA3_REGDUMP=y
 # CONFIG_COMMON_CLK_XGENE is not set
@@ -756,8 +742,7 @@ CONFIG_QCOM_QMI_DFC=y
 CONFIG_QCOM_QMI_POWER_COLLAPSE=y
 CONFIG_QCOM_SMEM=y
 # CONFIG_QCOM_MEMORY_DUMP_V2 is not set
-CONFIG_QCOM_WATCHDOG_V2=y
-CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
+# CONFIG_QCOM_WATCHDOG_V2 is not set
 CONFIG_QCOM_SMP2P=y
 CONFIG_QPNP_PBS=y
 CONFIG_MSM_SERVICE_LOCATOR=y
@@ -837,7 +822,7 @@ CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDERFS=y
 # CONFIG_ANDROID_SIMPLE_LMK is not set
 CONFIG_NVMEM_SPMI_SDAM=y
-CONFIG_STM=y
+# CONFIG_STM is not set
 CONFIG_SENSORS_SSC=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
@@ -903,7 +888,7 @@ CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 # CONFIG_FRAME_POINTER is not set
 CONFIG_MAGIC_SYSRQ=y
-CONFIG_PAGE_EXTENSION=y
+# CONFIG_PAGE_EXTENSION is not set
 CONFIG_PANIC_TIMEOUT=-1
 CONFIG_RCU_PANIC_ON_STALL=0
 # CONFIG_UPROBE_EVENTS is not set
@@ -987,7 +972,6 @@ CONFIG_SND_SOC_WCD_SPI=y
 # CONFIG_SND_SOC_WSA881X is not set
 CONFIG_SOUNDWIRE=y
 CONFIG_SOUNDWIRE_WCD_CTRL=y
-CONFIG_VOICE_MHI=y
 CONFIG_WCD9XXX_CODEC_CORE=y
 CONFIG_WCD_DSP_GLINK=y
 CONFIG_KPROFILES=y
