--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -7,6 +7,7 @@ CONFIG_CC_WERROR=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_HAVE_MOVE_PMD=y
 CONFIG_SCHED_WALT=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
@@ -19,7 +20,8 @@ CONFIG_RCU_BOOST_DELAY=500
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 # CONFIG_IKHEADERS is not set
-CONFIG_LOG_BUF_SHIFT=21
+CONFIG_LOG_BUF_SHIFT=20
+CONFIG_LOG_CPU_MAX_BUF_SHIFT=0
 CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_PAGE_COUNTER=y
@@ -55,7 +57,7 @@ CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_IGNORE_SKIP_FLAG=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-# CONFIG_RD_LZ4 is not set
+CONFIG_RD_ZSTD=y
 # CONFIG_SYSFS_SYSCALL is not set
 CONFIG_BPF_JIT=y
 CONFIG_BPF_SYSCALL=y
@@ -70,8 +72,6 @@ CONFIG_VMSTAT_INTERVAL=10
 # CONFIG_VM_EVENT_COUNTERS is not set
 # CONFIG_VMAP_STACK is not set
 CONFIG_JUMP_LABEL=y
-CONFIG_HAVE_ARCH_JUMP_LABEL=y
-CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_BLK_WBT=y
 CONFIG_BLK_WBT_SQ=y
@@ -134,6 +134,7 @@ CONFIG_PM_WAKELOCKS_GC=y
 CONFIG_CPU_IDLE=y
 CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_IDLE_GOV_TEO=y
+CONFIG_DT_IDLE_STATES=y
 # CONFIG_CPU_IDLE_GOV_MENU is not set
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
@@ -169,7 +170,7 @@ CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
-CONFIG_IP_ROUTE_VERBOSE=y
+# CONFIG_IP_ROUTE_VERBOSE is not set
 CONFIG_IP_PNP=y
 CONFIG_IP_PNP_DHCP=y
 CONFIG_NET_IPGRE_DEMUX=y
@@ -196,7 +197,7 @@ CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 CONFIG_NETFILTER=y
 CONFIG_NETLABEL=y
-# CONFIG_BRIDGE_NETFILTER is not set
+CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_SECMARK=y
 CONFIG_NF_CONNTRACK_EVENTS=y
@@ -342,9 +343,8 @@ CONFIG_ZRAM=y
 CONFIG_ZRAM_DEF_COMP_LZ4=y
 CONFIG_ZRAM_DEF_COMP="lz4"
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
-CONFIG_BLK_DEV_RAM=y
-CONFIG_BLK_DEV_RAM_SIZE=8192
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
+# CONFIG_BLK_DEV_RAM is not set
 CONFIG_TI_DRV8846=y
 CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
@@ -353,7 +353,7 @@ CONFIG_AKM09970=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
-CONFIG_SCSI_CONSTANTS=y
+# CONFIG_SCSI_CONSTANTS is not set
 CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
@@ -432,14 +432,14 @@ CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_FILTER=y
 CONFIG_PPP_MPPE=y
-CONFIG_PPP_MULTILINK=y
-CONFIG_PPPOE=y
+# CONFIG_PPP_MULTILINK is not set
+# CONFIG_PPPOE is not set
 CONFIG_PPTP=y
 CONFIG_PPPOL2TP=y
-CONFIG_PPPOLAC=y
-CONFIG_PPPOPNS=y
-CONFIG_PPP_ASYNC=y
-CONFIG_PPP_SYNC_TTY=y
+# CONFIG_PPPOLAC is not set
+# CONFIG_PPPOPNS is not set
+# CONFIG_PPP_ASYNC is not set
+# CONFIG_PPP_SYNC_TTY is not set
 CONFIG_USB_RTL8152=y
 CONFIG_USB_USBNET=y
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
@@ -535,7 +535,7 @@ CONFIG_REGULATOR_STUB=y
 # CONFIG_RC_CORE is not set
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
+# CONFIG_MEDIA_DIGITAL_TV_SUPPORT is not set
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
@@ -650,7 +650,7 @@ CONFIG_IPA_WDI_UNIFIED_API=y
 CONFIG_RMNET_IPA3=y
 CONFIG_RNDIS_IPA=y
 CONFIG_SEEMP_CORE=y
-CONFIG_IPA3_REGDUMP=y
+# CONFIG_IPA3_REGDUMP is not set
 # CONFIG_COMMON_CLK_XGENE is not set
 CONFIG_QCOM_MDSS_PLL=y
 CONFIG_SPMI_PMIC_CLKDIV=y
@@ -721,9 +721,10 @@ CONFIG_INLINE_WRITE_UNLOCK_BH=y
 CONFIG_INLINE_WRITE_UNLOCK_IRQ=y
 CONFIG_INLINE_WRITE_UNLOCK_IRQRESTORE=y
 # CONFIG_UNINLINE_SPIN_UNLOCK is not set
-# CONFIG_FSL_ERRATUM_A008585 is not set
-# CONFIG_HISILICON_ERRATUM_161010101 is not set
-# CONFIG_ARM64_ERRATUM_858921 is not set
+CONFIG_FSL_ERRATUM_A008585=y
+CONFIG_HISILICON_ERRATUM_161010101=y
+CONFIG_ARM64_ERRATUM_858921=y
+CONFIG_ARM_ARCH_TIMER_OOL_WORKAROUND=y
 CONFIG_QCOM_APCS_IPC=y
 CONFIG_MSM_QMP=y
 CONFIG_IOMMU_IO_PGTABLE_FAST=y
@@ -755,8 +756,8 @@ CONFIG_SETUP_SSR_NOTIF_TIMEOUTS=y
 CONFIG_SSR_SYSMON_NOTIF_TIMEOUT=20000
 CONFIG_SSR_SUBSYS_NOTIF_TIMEOUT=20000
 CONFIG_PANIC_ON_SSR_NOTIF_TIMEOUT=y
-CONFIG_MSM_BOOT_STATS=y
-CONFIG_QCOM_DCC_V2=y
+# CONFIG_MSM_BOOT_STATS is not set
+# CONFIG_QCOM_DCC_V2 is not set
 CONFIG_QCOM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
 CONFIG_ICNSS_QMI=y
@@ -772,17 +773,17 @@ CONFIG_QTI_RPMH_API=y
 CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_QCOM_GLINK=y
 CONFIG_QCOM_GLINK_PKT=y
-CONFIG_QCOM_QDSS_BRIDGE=y
 CONFIG_SMP2P_SLEEPSTATE_TIME=100
 CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
-CONFIG_MSM_EVENT_TIMER=y
+# CONFIG_MSM_EVENT_TIMER is not set
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_PM=y
 # CONFIG_MSM_QBT1000 is not set
 CONFIG_QCOM_FSA4480_I2C=y
-CONFIG_MEM_SHARE_QMI_SERVICE=y
+CONFIG_MEM_SHARE_QMI_SERVICE is not set
+# CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION is not set
 # CONFIG_MSM_IDLE_STATS is not set
 # CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
@@ -832,7 +833,13 @@ CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_F2FS_FS_COMPRESSION=y
+CONFIG_F2FS_FS_LZO=y
+CONFIG_F2FS_FS_LZORLE=y
 CONFIG_F2FS_FS_LZ4=y
+# CONFIG_F2FS_FS_LZ4HC is not set
+CONFIG_F2FS_FS_ZSTD=y
+# CONFIG_F2FS_IOSTAT is not set
+# CONFIG_F2FS_STAT_FS is not set
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_FS_VERITY=y
 CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
@@ -865,6 +872,7 @@ CONFIG_EROFS_FS_SECURITY=y
 CONFIG_EROFS_FS_ZIP=y
 CONFIG_EROFS_FS_PCPU_KTHREAD=y
 CONFIG_EROFS_FS_PCPU_KTHREAD_HIPRI=y
+CONFIG_PSTORE_LZ4_COMPRESS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_UNICODE=y
@@ -899,6 +907,7 @@ CONFIG_RCU_PANIC_ON_STALL=0
 CONFIG_DISABLE_TRACE_PRINTK=y
 # CONFIG_IPC_LOGGING is not set
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
+CONFIG_STACKTRACE=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
@@ -933,7 +942,6 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_CHACHA20_NEON=y
 CONFIG_CRYPTO_POLY1305_NEON=y
 CONFIG_CRYPTO_AES_ARM64_BS=y
-CONFIG_GENERIC_FIND_FIRST_BIT=y
 CONFIG_AUDIO_EXT_CLK=y
 CONFIG_DOLBY_DS2=y
 CONFIG_DOLBY_LICENSE=y
@@ -1002,3 +1010,15 @@ CONFIG_CGROUP_NET_CLASSID=y
 CONFIG_NETFILTER_NETLINK_ACCT=y
 CONFIG_KALLSYMS=y
 CONFIG_ZSTD_COMMON=y
+CONFIG_STRIP_ASM_SYMS=y
+CONFIG_RANDOM_TRUST_CPU=y
+CONFIG_OPTIMIZE_INLINING=y
+CONFIG_NET_ACT_BPF=y
+CONFIG_NET_SCH_TBF=y
+CONFIG_NET_CLS_MATCHALL=y
+CONFIG_NET_ACT_POLICE=y
+CONFIG_CGROUP_PIDS=y
+CONFIG_SLAB_FREELIST_RANDOM=y
+CONFIG_SLAB_FREELIST_HARDENED=y
+CONFIG_VETH=y
+CONFIG_USB_CONFIGFS_F_UVC=y
