--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -42,6 +42,7 @@ CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_SCHED=y
 # CONFIG_SCHED_TUNE is not set
+CONFIG_UCLAMP_ASSIST=y
 CONFIG_CPUSET_ASSIST=y
 CONFIG_CPUSET_BG="0-1"
 CONFIG_CPUSET_CAMERA="0-3,6-7"
