defconfig: Enable SLMK
Signed-off-by: onettboots <blackcocopet@gmail.com>

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -823,7 +823,9 @@ CONFIG_QCOM_LLCC_PMU=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDERFS=y
-# CONFIG_ANDROID_SIMPLE_LMK is not set
+CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=128
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=200
 CONFIG_NVMEM_SPMI_SDAM=y
 # CONFIG_STM is not set
 CONFIG_SENSORS_SSC=y
@@ -999,7 +1001,7 @@ CONFIG_PROCESS_RECLAIM=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 # CONFIG_LRU_GEN_STATS is not set
-CONFIG_PSI=y
+# CONFIG_PSI is not set
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_RMNET_PERF=y
