--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -24,7 +24,6 @@ CONFIG_LOG_BUF_SHIFT=20
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=0
 CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
-CONFIG_PAGE_COUNTER=y
 # CONFIG_MEMCG is not set
 # CONFIG_MEMCG_SWAP is not set
 CONFIG_BLK_CGROUP=y
@@ -114,7 +113,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_PGTABLE_MAPPING=y
-CONFIG_BALANCE_ANON_FILE_RECLAIM=y
+# CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
 CONFIG_SECCOMP=y
 # CONFIG_HARDEN_BRANCH_PREDICTOR is not set
 # CONFIG_ARMV8_DEPRECATED is not set
@@ -1019,7 +1018,7 @@ CONFIG_NET_SCH_TBF=y
 CONFIG_NET_CLS_MATCHALL=y
 CONFIG_NET_ACT_POLICE=y
 CONFIG_CGROUP_PIDS=y
-CONFIG_SLAB_FREELIST_RANDOM=y
-CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_VETH=y
 CONFIG_USB_CONFIGFS_F_UVC=y
+# CONFIG_SLAB_FREELIST_RANDOM is not set
+# CONFIG_SLAB_FREELIST_HARDENED is not set
