--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1266,13 +1266,7 @@ config SCHED_TUNE
 
 	  If unsure, say N.
 
-config UCLAMP_ASSIST
-	bool "UClamp configuration helper"
-	depends on ANDROID && UCLAMP_TASK && UCLAMP_TASK_GROUP
-	help
-	  This option enabled in-kernel uclamp setting overrides
-
-config CPUSETs_ASSIST
+config CPUSETS_ASSIST
 	bool "Cpuset configuration helper"
 	depends on CPUSETS
 	depends on ANDROID
