--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -15,8 +15,6 @@ CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_NOCB_CPU=y
-CONFIG_RCU_BOOST=y
-CONFIG_RCU_BOOST_DELAY=500
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 # CONFIG_IKHEADERS is not set
@@ -40,6 +38,8 @@ CONFIG_UCLAMP_BUCKETS_COUNT=20
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_SCHED=y
+# CONFIG_RT_GROUP_SCHED is not set
+# CONFIG_CGROUP_WRITEBACK is not set
 # CONFIG_SCHED_TUNE is not set
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
@@ -59,7 +59,7 @@ CONFIG_EMBEDDED=y
 # CONFIG_SLUB_CPU_PARTIAL is not set
 # CONFIG_PROFILING is not set
 CONFIG_PERF_EVENTS=y
-CONFIG_VMSTAT_INTERVAL=10
+CONFIG_VMSTAT_INTERVAL=20
 # CONFIG_VM_EVENT_COUNTERS is not set
 # CONFIG_VMAP_STACK is not set
 CONFIG_JUMP_LABEL=y
@@ -796,8 +796,8 @@ CONFIG_DEVFREQ_GOV_CDSPL3=y
 CONFIG_DEVFREQ_BOOST=y
 CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=58
 CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
-CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=12298
-CONFIG_DEVFREQ_MSM_LLCCBW_BOOST_FREQ=5931
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=9155
+CONFIG_DEVFREQ_MSM_LLCCBW_BOOST_FREQ=5161
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
 CONFIG_QCOM_SPMI_ADC5=y
