--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -15,6 +15,8 @@ CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_NOCB_CPU=y
+CONFIG_RCU_BOOST=y
+CONFIG_RCU_BOOST_DELAY=500
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 # CONFIG_IKHEADERS is not set
@@ -42,7 +44,6 @@ CONFIG_CGROUP_SCHED=y
 # CONFIG_CGROUP_WRITEBACK is not set
 # CONFIG_SCHED_TUNE is not set
 CONFIG_UCLAMP_ASSIST=y
-CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
@@ -105,7 +106,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_PGTABLE_MAPPING=y
-# CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
+CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_SECCOMP=y
 # CONFIG_HARDEN_BRANCH_PREDICTOR is not set
 # CONFIG_ARMV8_DEPRECATED is not set
@@ -335,9 +336,8 @@ CONFIG_ZRAM=y
 CONFIG_ZRAM_DEF_COMP_LZ4=y
 CONFIG_ZRAM_DEF_COMP="lz4"
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
-CONFIG_BLK_DEV_RAM=y
-CONFIG_BLK_DEV_RAM_SIZE=8192
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
+# CONFIG_BLK_DEV_RAM is not set
 CONFIG_TI_DRV8846=y
 CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
@@ -799,7 +799,7 @@ CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=58
 CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
 CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=9155
 CONFIG_DEVFREQ_MSM_LLCCBW_BOOST_FREQ=5161
-CONFIG_EXTCON_USB_GPIO=y
+# CONFIG_EXTCON_USB_GPIO is not set
 CONFIG_IIO=y
 CONFIG_QCOM_SPMI_ADC5=y
 CONFIG_PWM=y
@@ -837,6 +837,7 @@ CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_FS_VERITY=y
 CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
 CONFIG_QUOTA=y
+# CONFIG_SPECULATIVE_PAGE_FAULT is not set
 # CONFIG_QUOTA_NETLINK_INTERFACE is not set
 CONFIG_QFMT_V2=y
 CONFIG_FUSE_FS=y
@@ -987,6 +988,7 @@ CONFIG_IRQ_SBALANCE_THRESH=1024
 CONFIG_SCHED_CASS=y
 CONFIG_INIT_STACK_ALL_ZERO=y
 # CONFIG_BOEFFLA_WL_BLOCKER is not set
+# CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY is not set
 CONFIG_KSU=y
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_LRU_GEN=y
